doc: concat() method

--- a/src/DOM/iframe.html
+++ b/src/DOM/iframe.html
@@ -14,10 +14,12 @@
 		<!-- but this loads separate context like own window object and other -->
 		<!-- Main Document (Main Thread)
         +-- Rendering Engine
+        Array
         +-- JavaScript Execution
         
         Iframe (Separate Thread/Context)
         +-- Rendering Engine
+        
         +-- JavaScript Execution -->
 	</body>
 </html>
